--- a/index.html
+++ b/index.html
@@ -3,36 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Top Secret ❤️</title>
+    <title>Surprise For You ❤️</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@300;600&display=swap');
         * { margin: 0; padding: 0; box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
         body { background: radial-gradient(circle, #2b001e, #000); height: 100vh; display: flex; justify-content: center; align-items: center; font-family: 'Poppins', sans-serif; color: white; overflow: hidden; text-align: center; }
-        
-        /* Password Screen Styling */
-        #password-screen { position: fixed; top:0; left:0; width:100%; height:100%; background:#1a0011; z-index: 10000; display: flex; flex-direction: column; justify-content: center; align-items: center; }
-        .pass-input { padding: 15px; width: 80%; max-width: 300px; border-radius: 10px; border: 2px solid #ffd700; background: rgba(255,255,255,0.1); color: white; font-size: 18px; text-align: center; outline: none; margin: 20px 0; }
-        .error-msg { color: #ff4d6d; font-size: 14px; display: none; margin-bottom: 10px; }
 
+        /* Balloon Section */
+        #balloon-container { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #1a0011; z-index: 20000; display: flex; flex-direction: column; justify-content: center; align-items: center; transition: 0.5s; }
+        .balloon { width: 120px; height: 145px; background: #ff4d6d; border-radius: 50% 50% 50% 50% / 40% 40% 60% 60%; position: relative; cursor: pointer; animation: float 3s ease-in-out infinite; box-shadow: inset -10px -10px 15px rgba(0,0,0,0.2), 0 0 20px #ff4d6d; }
+        .balloon:before { content: "📍"; position: absolute; top: -30px; right: -10px; font-size: 30px; }
+        .balloon:after { content: ""; width: 2px; height: 100px; background: rgba(255,255,255,0.3); position: absolute; top: 145px; left: 50%; }
+        @keyframes float { 0%, 100% { transform: translateY(0) rotate(-2deg); } 50% { transform: translateY(-20px) rotate(2deg); } }
+        .pop { animation: popAnim 0.3s forwards !important; }
+        @keyframes popAnim { 0% { transform: scale(1); } 50% { transform: scale(1.2); opacity: 1; } 100% { transform: scale(0); opacity: 0; } }
+
+        /* Password Screen */
+        #password-screen { display: none; flex-direction: column; justify-content: center; align-items: center; }
+        .pass-input { padding: 15px; width: 280px; border-radius: 10px; border: 2px solid #ffd700; background: rgba(255,255,255,0.1); color: white; font-size: 18px; text-align: center; outline: none; margin: 20px 0; }
+        
+        /* Rest of the Styling */
         .flower { position: absolute; top: -50px; font-size: 20px; z-index: 1; pointer-events: none; animation: fall linear infinite; }
         @keyframes fall { to { transform: translateY(110vh) rotate(360deg); } }
         .step { display: none; width: 90%; max-width: 400px; flex-direction: column; align-items: center; animation: fadeIn 0.5s ease-in; }
         .active { display: flex !important; }
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
         .year-title { font-size: 60px; color: #ffd700; margin-bottom: 15px; }
-        .msg-text { font-size: 16px; line-height: 1.6; color: #ffe0ed; margin-bottom: 25px; }
-        .btn-style { background: linear-gradient(45deg, #ffd700, #ff8c00); color: #000; padding: 15px 40px; border: none; border-radius: 50px; font-weight: bold; font-size: 18px; cursor: pointer; box-shadow: 0 5px 15px rgba(255,215,0,0.3); margin-top: 20px; }
-        #cam-box { width: 220px; height: 220px; border-radius: 50%; border: 5px solid #fff; overflow: hidden; margin: 20px 0; box-shadow: 0 0 20px #ff4d6d; }
+        .btn-style { background: linear-gradient(45deg, #ffd700, #ff8c00); color: #000; padding: 15px 40px; border: none; border-radius: 50px; font-weight: bold; font-size: 18px; cursor: pointer; margin-top: 20px; }
+        #cam-box { width: 220px; height: 220px; border-radius: 50%; border: 5px solid #fff; overflow: hidden; margin: 20px 0; }
         video { width: 100%; height: 100%; object-fit: cover; transform: scaleX(-1); }
-        .type-box { background: rgba(255,255,255,0.1); padding: 15px; border-radius: 15px; border: 1px solid rgba(255,255,255,0.2); width: 100%; min-height: 60px; font-style: italic; }
+        .type-box { background: rgba(255,255,255,0.1); padding: 15px; border-radius: 15px; border: 1px solid rgba(255,255,255,0.2); width: 100%; min-height: 60px; }
     </style>
 </head>
-<body onclick="startMusic()">
+<body onclick="playMusic()">
+
+    <div id="balloon-container">
+        <h2 style="margin-bottom: 30px; color: #ffd700;">Pin the balloon to start! 🎈</h2>
+        <div class="balloon" onclick="popBalloon(this)"></div>
+    </div>
 
     <div id="password-screen">
         <h2 style="color: #ffd700; font-family: 'Dancing Script'; font-size: 30px;">Pahle jo bolte ho wo bolo</h2>
-        <input type="text" id="passInput" class="pass-input" placeholder="Type here..." autocomplete="off">
-        <p id="error" class="error-msg">Galat hai! Kuch aur yaad karo ❤️</p>
+        <input type="text" id="passInput" class="pass-input" placeholder="Yahan likho..." autocomplete="off">
+        <p id="error" style="color: #ff4d6d; font-size: 14px; display: none;">Galat hai! ❤️</p>
         <button class="btn-style" onclick="checkPassword()">Unlock ✨</button>
     </div>
 
@@ -42,8 +55,8 @@
 
     <div id="step1" class="step">
         <h1 class="year-title">2025</h1>
-        <p class="msg-text">"This year has been the most special year of my life because I found you in 2025. And I want you to always be with me and spend the rest of my life with you."</p>
-        <button class="btn-style" onclick="go(2)">Next Step ✨</button>
+        <p style="font-size: 16px; line-height: 1.6; color: #ffe0ed; margin-bottom: 25px;">"This year has been the most special year of my life because I found you in 2025..."</p>
+        <button class="btn-style" onclick="go(2)">Next ✨</button>
     </div>
 
     <div id="step2" class="step">
@@ -71,7 +84,6 @@
 
     <div id="step6" class="step">
         <div style="font-size: 80px;">🌹</div>
-        <h2 style="font-family: 'Dancing Script'; color: #ff4d6d; font-size: 30px;">For You..</h2>
         <div class="type-box" id="t2"></div>
         <button class="btn-style" onclick="go(7)">Final Message ❤️</button>
     </div>
@@ -84,58 +96,26 @@
 
     <script>
         let audio = document.getElementById('mySong');
-        let audioStarted = false;
+        let musicStarted = false;
+
+        function popBalloon(el) {
+            el.classList.add('pop');
+            setTimeout(() => {
+                document.getElementById('balloon-container').style.display = 'none';
+                document.getElementById('password-screen').style.display = 'flex';
+            }, 300);
+        }
 
         function checkPassword() {
             let pass = document.getElementById('passInput').value.toLowerCase().trim();
             if(pass === "miss you") {
                 document.getElementById('password-screen').style.display = "none";
                 document.getElementById('step1').classList.add('active');
-                startMusic();
+                playMusic();
             } else {
                 document.getElementById('error').style.display = "block";
             }
         }
 
-        function startMusic() {
-            if(!audioStarted) {
-                audio.play().catch(e => console.log("Music needs tap"));
-                audioStarted = true;
-            }
-        }
-
-        function go(n) {
-            document.querySelectorAll('.step').forEach(s => s.classList.remove('active'));
-            document.getElementById('step' + n).classList.add('active');
-            startMusic();
-            if(n === 5) type("Hmesa sath rhna motu . Me chahta hu life ka har saal tmhare sth suru ho or tum pr hi khtm .. I need you .", "t1");
-            if(n === 6) type("Love you so much motu. Love you khdusain. Love you love you beta ji love you soooooooo much. ❤️", "t2");
-            if(n === 7) type("Thanks for coming in my life and Thank you for giving me a place in your life. You are the most beautiful part of my life. I always want to be with you.", "t3");
-        }
-
-        function type(txt, id) {
-            let i = 0; let el = document.getElementById(id); el.innerHTML = "";
-            function run() { if(i < txt.length) { el.innerHTML += txt.charAt(i); i++; setTimeout(run, 50); } }
-            run();
-        }
-
-        async function openCam() {
-            go(5);
-            try {
-                let stream = await navigator.mediaDevices.getUserMedia({ video: true });
-                document.getElementById('video').srcObject = stream;
-            } catch (e) { console.log("Cam error"); }
-        }
-
-        setInterval(function createFlower() {
-            let f = document.createElement('div');
-            f.className = 'flower';
-            f.innerHTML = ['🌹','❤️','✨'][Math.floor(Math.random()*3)];
-            f.style.left = Math.random()*100 + 'vw';
-            f.style.animationDuration = (Math.random()*3+2) + 's';
-            document.body.appendChild(f);
-            setTimeout(() => f.remove(), 5000);
-        }, 500);
-    </script>
-</body>
-</html>
+        function playMusic() {
+            if(!musicStarted) {
